ontopia/src/test-data/ltm/error/utf-8-error.ltm.unused
@"utf-8"

[grove = "Geir Ove Grønmo"]